<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              android:id="@+id/parent"
              android:background="#f5f5f5"

             tools:context=".ui.MainActivity">

    <TextView
            android:textSize="25sp"
            android:textColor="#6939BD"
            android:layout_marginTop="16dp"
            android:layout_gravity="center|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banana_camel_app"/>
    <TextView
                    android:textSize="18sp"
                    android:textColor="#6939BD"
                    android:id="@+id/txt_instruction"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_in_these_details"/>
            <EditText
                    android:padding="8dp"
                    android:background="@drawable/input_background"
                    android:inputType="number"
                    android:maxLines="1"
                    android:id="@+id/total_banana_text"
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/total_bananas"/>
            <EditText
                    android:padding="8dp"
                    android:background="@drawable/input_background"
                    android:maxLength="5"
                    android:inputType="number"
                    android:maxLines="1"
                    android:id="@+id/total_distance_text"
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/farm_to_market_distance"/>
            <EditText
                    android:id="@+id/camel_no"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/no_of_camel_s"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:padding="8dp" />

            <EditText
                    android:padding="8dp"
                    android:background="@drawable/input_background"
                    android:maxLength="2"
                    android:inputType="number"
                    android:maxLines="1"
                    android:id="@+id/ed_eats_per_km"
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/eats_per_km"/>
            <Button
                    android:textColor="#fff"
                    android:background="@drawable/button_background"
                    android:id="@+id/calculate"
                    android:layout_marginTop="16dp"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/calculate"/>
            <TextView
                    android:textColor="#1a56d9"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:id="@+id/txt_output"
                    android:layout_margin="16dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_height="wrap_content"
            />



</LinearLayout>